[gd_scene load_steps=10 format=2]

[ext_resource path="res://Scripts/Login/ConfirmEmail.gd" type="Script" id=1]
[ext_resource path="res://Art/UI/ButtonStyles/ButtonPressed.tres" type="StyleBox" id=2]
[ext_resource path="res://Art/UI/ButtonStyles/ButtonHover.tres" type="StyleBox" id=3]
[ext_resource path="res://Art/UI/ButtonStyles/ButtonNormal.tres" type="StyleBox" id=4]
[ext_resource path="res://Fonts/alagard.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://Art/UI/hover.png" type="Texture" id=6]
[ext_resource path="res://Fonts/FontNormal.tres" type="DynamicFont" id=7]
[ext_resource path="res://Scenes/UI/LoadingWindow.tscn" type="PackedScene" id=8]

[sub_resource type="DynamicFont" id=1]
size = 32
font_data = ExtResource( 5 )

[node name="ConfirmEmail" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RequestWindow" type="Control" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -175.0
margin_top = -102.5
margin_right = 175.0
margin_bottom = 102.5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NinePatchRect" type="NinePatchRect" parent="RequestWindow"]
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource( 6 )
patch_margin_left = 2
patch_margin_top = 2
patch_margin_right = 2
patch_margin_bottom = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="RequestWindow"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -104.0
margin_top = -101.5
margin_right = 110.0
margin_bottom = 101.5
grow_horizontal = 2
grow_vertical = 2
custom_constants/separation = 16
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="RequestWindow/VBoxContainer"]
margin_top = 22.0
margin_right = 214.0
margin_bottom = 52.0
grow_horizontal = 2
grow_vertical = 2
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
text = "Confirm Email"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CodeLineEdit" type="LineEdit" parent="RequestWindow/VBoxContainer"]
margin_top = 68.0
margin_right = 214.0
margin_bottom = 96.0
grow_horizontal = 2
grow_vertical = 2
rect_min_size = Vector2( 200, 28 )
custom_styles/read_only = ExtResource( 2 )
custom_styles/normal = ExtResource( 4 )
custom_fonts/font = ExtResource( 7 )
custom_colors/cursor_color = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_uneditable = Color( 0.168627, 0.168627, 0.168627, 1 )
placeholder_text = "Code"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="RequestWindow/VBoxContainer"]
margin_top = 112.0
margin_right = 214.0
margin_bottom = 138.0
custom_constants/separation = 16
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SubmitButton" type="Button" parent="RequestWindow/VBoxContainer/HBoxContainer"]
margin_left = 14.0
margin_right = 99.0
margin_bottom = 26.0
grow_horizontal = 2
grow_vertical = 2
rect_min_size = Vector2( 85, 26 )
custom_styles/hover = ExtResource( 3 )
custom_styles/pressed = ExtResource( 2 )
custom_styles/normal = ExtResource( 4 )
custom_fonts/font = ExtResource( 7 )
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
text = "Submit"

[node name="BackButton" type="Button" parent="RequestWindow/VBoxContainer/HBoxContainer"]
margin_left = 115.0
margin_right = 200.0
margin_bottom = 26.0
grow_horizontal = 2
grow_vertical = 2
rect_min_size = Vector2( 85, 26 )
custom_styles/hover = ExtResource( 3 )
custom_styles/pressed = ExtResource( 2 )
custom_styles/normal = ExtResource( 4 )
custom_fonts/font = ExtResource( 7 )
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
text = "Back"

[node name="HBoxContainer2" type="HBoxContainer" parent="RequestWindow/VBoxContainer"]
margin_top = 154.0
margin_right = 214.0
margin_bottom = 180.0
custom_constants/separation = 16
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ResendButton" type="Button" parent="RequestWindow/VBoxContainer/HBoxContainer2"]
margin_left = 35.0
margin_right = 179.0
margin_bottom = 26.0
grow_horizontal = 2
grow_vertical = 2
rect_min_size = Vector2( 144, 26 )
custom_styles/hover = ExtResource( 3 )
custom_styles/pressed = ExtResource( 2 )
custom_styles/normal = ExtResource( 4 )
custom_fonts/font = ExtResource( 7 )
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
text = "Resend Code"

[node name="LoadingWindow" parent="." instance=ExtResource( 8 )]
visible = false

[node name="PopupHolder" type="Control" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="text_entered" from="RequestWindow/VBoxContainer/CodeLineEdit" to="." method="on_LineEdit_Enter"]
[connection signal="pressed" from="RequestWindow/VBoxContainer/HBoxContainer/SubmitButton" to="." method="_on_SubmitButton_pressed"]
[connection signal="pressed" from="RequestWindow/VBoxContainer/HBoxContainer/BackButton" to="." method="_on_BackButton_pressed"]
[connection signal="pressed" from="RequestWindow/VBoxContainer/HBoxContainer2/ResendButton" to="." method="_on_ResendButton_pressed"]
